samples/_failures_safe/1761305485_739287_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a56d97b.c: In function ‘main’:
./samples/SAFE/__tmp_0a56d97b.c:150:46: error: invalid operands to binary / (have ‘double’ and ‘char *’)
  150 |     double ratio = (compressed.size * 100.0) / input
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                                     |        |
      |                                     double   char *
./samples/SAFE/__tmp_0a56d97b.c:150:5: error: expected ‘,’ or ‘;’ at end of input
  150 |     double ratio = (compressed.size * 100.0) / input
      |     ^~~~~~
./samples/SAFE/__tmp_0a56d97b.c:150:5: error: expected declaration or statement at end of input
